imlo xatolar to'g'irlandi

--- a/2.Docker on Windows/2.Docker on Windows.md
+++ b/2.Docker on Windows/2.Docker on Windows.md
@@ -1,6 +1,4 @@
-# Docker on Windows
-
-## Docker Windows’da
+# Docker Windows’da
 
 Salom va ushbu **Docker on Windows** bo‘yicha batafsil darsga xush kelibsiz.  
 Men **Mumshad Mannambeth**, ushbu sessiyaning instruktoriman.  
