--- a/3.Docker Architecture in Depth/3.1.Docker Engine.md
+++ b/3.Docker Architecture in Depth/3.1.Docker Engine.md
@@ -1,6 +1,4 @@
-# Docker Engine
-
-## Docker Engine haqida
+# Docker Engine haqida
 
 Salom va ushbu **Docker Engine** bo‘yicha batafsil darsga xush kelibsiz.  
 Men **Mumshad Mannambeth**, ushbu sessiyaning instruktoriman.  
